# votelytics

./: .gitignore  2011_DATA_LOADING_SUMMARY.md  CLAUDE_CONTEXT.md  DEPLOYMENT-GUIDE.md  README.md  SECURITY.md  nginx-config.txt  tweet.txt
client/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
server/: .env.example  README.md  pyproject.toml  test_db.py  test_db_connection.py
server/app/: __init__.py  config.py  database.py  main.py  rate_limiters.py
server/app/api/: __init__.py  constituencies.py  dependencies.py  elections.py  predictions.py
server/app/models/: __init__.py  candidate.py  constituency.py  election.py  prediction.py
server/app/schemas/: __init__.py  constituency.py  election.py  prediction.py
server/app/services/: demographics_fetcher.py  prediction_generator.py
server/scripts/: add_ac_code_to_results.py  add_slug_to_constituencies.py  analyze_party_name_inconsistencies.py  check_2016_status.py  check_constituencies.py  check_party_names.py  delete_2016_election.py  delete_2016_fix.py  delete_2016_sql.py  drop_all_tables.py  examine_2011_pdf.py  examine_2016.py  examine_excel.py  export_slugs.py  force_drop_tables.py  generate_predictions.py  init_db.py  load_2011_data.py  load_2016_data.py  load_2021_data.py  load_geojson.py  migrate_to_slug.py  parse_2011_pdf.py  populate_demographics.py  seed_sample_data.py  standardize_party_names.py  test_2016_api.py  test_bastion_3_elections.py  test_gpt5_mini.py  test_prediction.py  validate_geojson.py  verify_2016_data.py  verify_all_elections.py
(+37 files in other folders)
